# swagger/swagger.json
@@ -662,44 +662,6 @@
             }
         },
         "/order/": {
-            "put": {
-                "tags": [
-                    "order"
-                ],
-                "summary": "sửa đơn hàng",
-                "description": "Update Category",
-                "operationId": "OrderController.Update Category",
-                "parameters": [
-                    {
-                        "in": "header",
-                        "name": "token",
-                        "description": "Token",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "in": "body",
-                        "name": "id",
-                        "description": "id order",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        },
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/responses.ResponseBool"
-                        }
-                    },
-                    "404": {
-                        "description": "{object} responses.ResponseBool"
-                    }
-                }
-            },
             "post": {
                 "tags": [
                     "order"
@@ -794,6 +756,43 @@
                     },
                     "404": {
                         "description": "{object} responses.ResponseArray"
+                    }
+                }
+            }
+        },
+        "/order/{id}": {
+            "put": {
+                "tags": [
+                    "order"
+                ],
+                "summary": "sửa đơn hàng",
+                "description": "Update Category",
+                "operationId": "OrderController.Update Category",
+                "parameters": [
+                    {
+                        "in": "header",
+                        "name": "token",
+                        "description": "Token",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "id",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/responses.ResponseBool"
+                        }
+                    },
+                    "404": {
+                        "description": "{object} responses.ResponseBool"
                     }
                 }
             }
@@ -986,6 +985,110 @@
                 }
             }
         },
+        "/sale/": {
+            "get": {
+                "tags": [
+                    "sale"
+                ],
+                "summary": "Lấy danh sách sale",
+                "description": "Get List Sale",
+                "operationId": "SaleController.Get List Sale",
+                "parameters": [
+                    {
+                        "in": "header",
+                        "name": "token",
+                        "description": "Token",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/responses.ResponseArray"
+                        }
+                    },
+                    "404": {
+                        "description": "{object} responses.ResponseArray"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "sale"
+                ],
+                "summary": "Tạo sale",
+                "description": "Create sale",
+                "operationId": "SaleController.Create Sale",
+                "parameters": [
+                    {
+                        "in": "header",
+                        "name": "token",
+                        "description": "Token",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "body",
+                        "name": "data",
+                        "description": "data",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requests.RequestSale"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/responses.ResponseBool"
+                        }
+                    },
+                    "404": {
+                        "description": "{object} responses.ResponseBool"
+                    }
+                }
+            }
+        },
+        "/sale/{id}": {
+            "put": {
+                "tags": [
+                    "sale"
+                ],
+                "summary": "sửa sale",
+                "description": "Update Sale",
+                "operationId": "SaleController.Update Sale",
+                "parameters": [
+                    {
+                        "in": "header",
+                        "name": "token",
+                        "description": "Token",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "id",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/responses.ResponseBool"
+                        }
+                    },
+                    "404": {
+                        "description": "{object} responses.ResponseBool"
+                    }
+                }
+            }
+        },
         "/user/": {
             "get": {
                 "tags": [
@@ -1159,11 +1262,11 @@
         }
     },
     "definitions": {
-        "871.0xc0006b6ea0.false": {
+        "871.0xc0005193b0.false": {
             "title": "false",
             "type": "object"
         },
-        "997.0xc0006b6f30.false": {
+        "997.0xc000519440.false": {
             "title": "false",
             "type": "object"
         },
@@ -1350,6 +1453,20 @@
                 }
             }
         },
+        "requests.RequestDetailSale": {
+            "title": "RequestDetailSale",
+            "type": "object",
+            "properties": {
+                "product_id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "sale_price": {
+                    "type": "number",
+                    "format": "float"
+                }
+            }
+        },
         "requests.RequestDis": {
             "title": "RequestDis",
             "type": "object",
@@ -1497,6 +1614,18 @@
                 }
             }
         },
+        "requests.RequestSale": {
+            "title": "RequestSale",
+            "type": "object",
+            "properties": {
+                "detail": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/requests.RequestDetailSale"
+                    }
+                }
+            }
+        },
         "requests.RequestUpdateStatus": {
             "title": "RequestUpdateStatus",
             "type": "object",
@@ -1566,7 +1695,7 @@
             "type": "object",
             "properties": {
                 "data": {
-                    "$ref": "#/definitions/997.0xc0006b6f30.false"
+                    "$ref": "#/definitions/997.0xc000519440.false"
                 },
                 "error": {
                     "$ref": "#/definitions/responses.Err"
@@ -1591,7 +1720,7 @@
             "type": "object",
             "properties": {
                 "data": {
-                    "$ref": "#/definitions/871.0xc0006b6ea0.false"
+                    "$ref": "#/definitions/871.0xc0005193b0.false"
                 },
                 "error": {
                     "$ref": "#/definitions/responses.Err"
